# Ehrlich

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
assets/molecule_surface/: 4ins2.pickle  8sib.pickle
ehrilch/: molecule.py  molecule_surface.py  optimizer.py  segment.py  virtual_grid.py
ehrilch/utils/: math_utils.py  plane_utils.py  visualize.py
ehrilich/: __init__.py  molecule.py  molecule_surface.py  optimizer.py
ehrilich/utils/: geometry_utils.py  math_utils.py  plane_utils.py
ehrlich/: Copy of segment.py  TMSmesh2.1  __init__.py  alignment.py  amin_similarity.py  mesh.py  molecule.py  molecule_structure.py  molecule_surface.py  optimizer.py  p1.txt  pipline.py  segment.py  setup.py  virtual_grid.py
ehrlich.egg-info/: PKG-INFO  SOURCES.txt
ehrlich/operations/: __init__.py  find_closest.c
ehrlich/tmsmesh/: p2.txt
ehrlich/utils/: amin_similarity.py  displacement.py  icp_helper.py  math_utils.py  plane_utils.py  visualize.py  visualize_utils.py
tests/: MoleculeTests.py  avg_len_test.py  molecule_surface_tests.py  molecule_tests.py  project_test.py  segment_test.py  sparse_test.py  virtual_grid_test.py  visualize_test.py
