[metadata]
name = ehrlich
version = 1.0.0
author = NanoBioRobots inc
description = Tool for comparing protein surface parameters
license = LGPLv3
classifiers =
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)

[options]
zip_safe=False
packages = find:
python_requires = >= 3.8

[options.package_data]
* = TMSmesh2.1, leg.dat, p1.txt, p2.txt